--- a/package.json
+++ b/package.json
@@ -1,12 +1,5 @@
 {
-  "name": "dominate-server",
-  "version": "1.0.0",
-  "description": "Backend para el juego Dominate",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js"
-  },
   "dependencies": {
-    "express": "^4.21.2"
+    "cors": "^2.8.5"
   }
 }
