--- a/package.json
+++ b/package.json
@@ -1,5 +1,24 @@
 {
+  "name": "dominate-server",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
-    "cors": "^2.8.5"
-  }
+    "cors": "^2.8.5",
+    "express": "^4.18.4"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Novabitgames/dominate-server.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Novabitgames/dominate-server/issues"
+  },
+  "homepage": "https://github.com/Novabitgames/dominate-server#readme"
 }
