--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "cors": "^2.8.5",
     "express": "^4.18.4"
   },
+  "engines": {
+    "node": ">=16.0.0"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Novabitgames/dominate-server.git"
