--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "dominate-server",
   "version": "1.0.0",
+  "description": "",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
