--- a/package.json
+++ b/package.json
@@ -9,5 +9,16 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.4"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Novabitgames/dominate-server.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Novabitgames/dominate-server/issues"
+  },
+  "homepage": "https://github.com/Novabitgames/dominate-server#readme"
 }
