--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.4"
+    "express": "^4.18.4",
+    "ws": "^8.18.1"
   },
   "repository": {
     "type": "git",
