--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "dominate-server",
   "version": "1.0.0",
@@ -8,8 +9,7 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.4",
-    "ws": "^8.18.1"
+    "express": "^4.18.4"
   },
   "repository": {
     "type": "git",
